Cambios en menu

--- a/paquescolar-web/src/main/webapp/app/comunes/filtroParticipanteOferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/filtroParticipanteOferta.xhtml
@@ -131,7 +131,7 @@
                                                 <p:outputLabel value="#{precio.idNivelEducativo.descripcionNivel}" id="nivelEducativo"/>
                                             </p:column>
 
-                                            <p:column headerText="Precio U." width="50" styleClass="celdaNumero" id="precio">
+                                            <p:column headerText="Precio U." width="50" styleClass="numero" id="precio">
                                                 <h:outputText value="#{precio.precioReferencia}">
                                                     <f:convertNumber pattern="###0.00"/>
                                                 </h:outputText>
@@ -221,7 +221,7 @@
                                                 <p:outputLabel value="#{precio.idNivelEducativo.descripcionNivel}" id="nivelEducativo"/>
                                             </p:column>
 
-                                            <p:column headerText="Precio U." width="50" styleClass="celdaNumero" id="precio">
+                                            <p:column headerText="Precio U." width="50" styleClass="numero" id="precio">
                                                 <h:outputText value="#{precio.precioReferencia}">
                                                     <f:convertNumber pattern="###0.00"/>
                                                 </h:outputText>
