--- a/paquescolar-web/src/main/webapp/app/con07PlanillaPago.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con07PlanillaPago.xhtml
@@ -111,6 +111,9 @@
                         <p:column headerText="Cantidad" style="text-align: right" width="50">
                             <h:outputText value="#{pla.cantidadActual}"/>
                         </p:column>
+                        <p:column headerText="Núm.Cheque" style="text-align: right" width="70">
+                            <h:outputText value="#{pla.numCheque}"/>
+                        </p:column>
                         <p:column headerText="Entidad Financiera" width="200">
                             <h:outputText value="#{pla.nombreEntFinan}"/>
                         </p:column>
@@ -119,7 +122,7 @@
                                 <f:setPropertyActionListener value="#{pla.idPlanilla}" target="#{pagoProveedoresController.idPlanilla}"/>
                             </p:commandLink>
                         </p:column>
-                        <p:column headerText="Fecha Pla." style="text-align: center" width="55">
+                        <p:column headerText="Fecha Pla." style="text-align: center" width="65">
                             <h:outputText value="#{pla.fechaInsercion}">
                                 <f:convertDateTime pattern="dd/MM/yyyy"/>
                             </h:outputText>
