--- a/paquescolar-web/src/main/webapp/app/reg03PreciosReferencia.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg03PreciosReferencia.xhtml
@@ -66,7 +66,7 @@
                             <p:outputLabel value="#{precio.idNivelEducativo.descripcionNivel}" id="nivelEducativo"/>
                         </p:column>
 
-                        <p:column headerText="Precio U." width="50" styleClass="celdaNumero" id="precio">
+                        <p:column headerText="Precio U." width="50" styleClass="numero" id="precio">
                             <p:cellEditor>  
                                 <f:facet name="output">
                                     <h:outputText value="#{precio.precioReferencia}" id="precio2">
