--- a/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
@@ -8,13 +8,13 @@
     <ui:define name="content">
         <p:menubar id="menuBar" styleClass="divSticky"> 
             <p:menuitem value="Nuevo" icon="fa fa-file-o" id="mtmNuevo"
-                        action="#{ofertaBienesServiciosController.prepareCreate}" 
+                        action="#{ofertaMB.prepareCreate}" 
                         update="pnlFiltro tblParticipantes"/>
             <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar"
-                        action="#{ofertaBienesServiciosController.prepareEdit}" 
+                        action="#{ofertaMB.prepareEdit}" 
                         update="pnlFiltro tblParticipantes"/>
-            <p:menuitem value="Guardar" icon="fa fa-save" action="#{ofertaBienesServiciosController.guardar}" 
-                        disabled="#{menuController.usuarioSoloLectura || ofertaBienesServiciosController.deshabilitar}"
+            <p:menuitem value="Guardar" icon="fa fa-save" action="#{ofertaMB.guardar}" 
+                        disabled="#{menuController.usuarioSoloLectura || ofertaMB.deshabilitar}"
                         update="tblParticipantes"/>
             <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true"/>
             <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
@@ -36,20 +36,20 @@
                                  style="width: 100%; border:0px none; background-color:transparent;"
                                  styleClass="form-group ui-panelgrid-blank">
                         <p:outputLabel value="#{bundle['compra.rubroAdq']}:" />
-                        <p:selectOneMenu id="cboRubro" value="#{ofertaBienesServiciosController.rubro}" disabled="#{ofertaBienesServiciosController.deshabilitar}">
+                        <p:selectOneMenu id="cboRubro" value="#{ofertaMB.rubro}" disabled="#{ofertaMB.deshabilitar}">
                             <f:selectItem itemLabel="Seleccione un rubro" itemValue="null" />
                             <f:selectItems value="#{anhoProcesoController.lstRubros}" var="rubro" itemValue="#{rubro.idRubroInteres}" itemLabel="#{rubro.descripcionRubro}" />
-                            <p:ajax update=":frmPrincipal:pnlFiltro tblParticipantes" listener="#{ofertaBienesServiciosController.limpiarFiltros}"/>
+                            <p:ajax update=":frmPrincipal:pnlFiltro tblParticipantes" listener="#{ofertaMB.limpiarFiltros}"/>
                         </p:selectOneMenu>
 
                         <p:outputLabel value="#{bundle['ce.codEnt']}:" for="txtCodigoEntidad" />
                         <h:panelGrid columns="3" id="codigoEntidad" >
-                            <p:inputText id="txtCodigoEntidad" maxlength="5" value="#{ofertaBienesServiciosController.codigoEntidad}" size="6" disabled="#{ofertaBienesServiciosController.deshabilitar}" autocomplete="off" requiredMessage="Código de infraestructura" onkeyup="queryEntidad(this.value);"/>
-                            <p:outputLabel id="nombreCE" value="#{ofertaBienesServiciosController.entidadEducativa.nombre}" style="font-weight: bold"/>
+                            <p:inputText id="txtCodigoEntidad" maxlength="5" value="#{ofertaMB.codigoEntidad}" size="6" disabled="#{ofertaMB.deshabilitar}" autocomplete="off" requiredMessage="Código de infraestructura" onkeyup="queryEntidad(this.value);"/>
+                            <p:outputLabel id="nombreCE" value="#{ofertaMB.entidadEducativa.nombre}" style="font-weight: bold"/>
                         </h:panelGrid>
 
                         <p:outputLabel value="Fecha de registro:" for="cldFechaApertura" />
-                        <p:calendar id="cldFechaApertura" value="#{ofertaBienesServiciosController.selected.fechaApertura}"  pattern="dd/MM/yyyy" size="11" disabled="#{ofertaBienesServiciosController.deshabilitar}" onkeypress="return disableEnter();" requiredMessage="Fecha de apertura de la oferta" />
+                        <p:calendar id="cldFechaApertura" value="#{ofertaMB.selected.fechaApertura}"  pattern="dd/MM/yyyy" size="11" disabled="#{ofertaMB.deshabilitar}" onkeypress="return disableEnter();" requiredMessage="Fecha de apertura de la oferta" />
                     </p:panelGrid>
                 </div>
 
@@ -58,10 +58,10 @@
                         <i class="fa fa-list-ol verde" style="font-size: 16px;"></i>
                         <p:spacer width="10"/>
                         <h:outputText value="Lista de Proveedores"/>
-                        <p:commandButton id="btoAgregarProveedor" value=" Agregar" icon="fa fa-plus-circle" disabled="#{!ofertaBienesServiciosController.abrirDialogCe}" style="float: right; font-size: 12px;"
-                                         action="#{ofertaBienesServiciosController.abrirDialogProveedor}" update="tbEmpresas"/>
+                        <p:commandButton id="btoAgregarProveedor" value=" Agregar" icon="fa fa-plus-circle" disabled="#{!ofertaMB.abrirDialogCe}" style="float: right; font-size: 12px;"
+                                         action="#{ofertaMB.abrirDialogProveedor}" update="tbEmpresas"/>
                     </h1>
-                    <p:dataTable id="tblParticipantes" value="#{ofertaBienesServiciosController.selected.participantesList}" var="participante" 
+                    <p:dataTable id="tblParticipantes" value="#{ofertaMB.selected.participantesList}" var="participante" 
                                  emptyMessage="No se han agregado proveedores" rowIndexVar="rowId"  
                                  rowKey="#{participante.idParticipante}" rowStyleClass="#{participante.estadoEliminacion eq 1 ? 'filaEliminada' : null}">
 
@@ -82,25 +82,26 @@
                         </p:column>
 
                         <p:column headerText="Eliminar" width="40" style="text-align: center;">
-                            <p:commandLink oncomplete="PF('confirmDialog').show();" process="@this" disabled="#{ofertaBienesServiciosController.deshabilitar}">
+                            <p:commandLink oncomplete="PF('confirmDialog').show();" process="@this" disabled="#{ofertaMB.deshabilitar}">
                                 <p:outputLabel rendered="#{!participante.eliminar}"> <i class="fa fa-trash"></i></p:outputLabel>
                                 <p:outputLabel rendered="#{participante.eliminar}"> <i class="fa fa-minus-circle"></i></p:outputLabel>
-                                <f:setPropertyActionListener value="#{participante}" target="#{ofertaBienesServiciosController.participanteSeleccionado}"/>  
-                                <f:setPropertyActionListener value="#{rowId}" target="#{ofertaBienesServiciosController.rowEdit}"/>  
+                                <f:setPropertyActionListener value="#{participante}" target="#{ofertaMB.participanteSeleccionado}"/>  
+                                <f:setPropertyActionListener value="#{rowId}" target="#{ofertaMB.rowEdit}"/>  
 
                                 <f:viewParam name="idParticipante" value="#{participante.idParticipante}"/>
                             </p:commandLink>
                         </p:column>
 
                         <p:column headerText="Cotización" width="50" style="text-align: center;">
-                            <p:commandButton action="#{ofertaBienesServiciosController.rptCotizacion}" ajax="false" disabled="#{ofertaBienesServiciosController.selected.idOferta eq null}" icon="fa fa-print">
-                                <f:setPropertyActionListener value="#{participante}" target="#{ofertaBienesServiciosController.participanteSeleccionado}" />  
+                            <p:commandButton action="#{ofertaMB.rptCotizacion}" ajax="false" disabled="#{ofertaMB.selected.idOferta eq null}" icon="fa fa-print">
+                                <f:setPropertyActionListener value="#{participante}" target="#{ofertaMB.participanteSeleccionado}" />  
                             </p:commandButton>
                         </p:column>
 
                         <p:column headerText="Ver Oferta" width="40" style="text-align: center;">
-                            <p:commandLink action="#{ofertaBienesServiciosController.editarOfertaParticipante}" disabled="#{ofertaBienesServiciosController.selected.idOferta eq null}">
+                            <p:commandLink action="#{ofertaMB.editarOfertaParticipante}" disabled="#{ofertaMB.selected.idOferta eq null}">
                                 <f:param name="idParticipante" value="#{participante.idParticipante}"/>
+                                <f:param name="txtCodigoEntidad" value="#{participante.idOferta.codigoEntidad.codigoEntidad}"/>
                                 <i class="fa fa-eye" style="font-size: 17px;"></i>
                             </p:commandLink>
                         </p:column>
@@ -113,14 +114,14 @@
             <p:panel>
                 <p:outputLabel value="¿Qué tipo de documento desea imprimir?"/>
                 <h:panelGrid columns="2">
-                    <p:selectOneRadio value="#{ofertaBienesServiciosController.tipoDocumentoImp}">
+                    <p:selectOneRadio value="#{ofertaMB.tipoDocumentoImp}">
                         <f:selectItem itemLabel="Análisis Técnico y Económico" itemValue="1" />
                         <f:selectItem itemLabel="Certificación Presupuestaria" itemValue="2" />
                     </p:selectOneRadio>
                 </h:panelGrid>
             </p:panel>
             <f:facet name="footer">
-                <p:commandButton value="Aceptar" onclick="PF('dlgImprimir').hide();" ajax="false" action="#{ofertaBienesServiciosController.imprimir}"/>
+                <p:commandButton value="Aceptar" onclick="PF('dlgImprimir').hide();" ajax="false" action="#{ofertaMB.imprimir}"/>
                 <p:commandButton value="Cancelar" ajax="true" onclick="PF('dlgImprimir').hide();"/>
             </f:facet>
         </p:dialog>
@@ -129,13 +130,13 @@
 
         <p:dialog id="dlgProveedor" widgetVar="dlgProveedor" header="Seleccione un proveedor" closable="true" style="font-size: 11px;" modal="true" showEffect="fade" hideEffect="fade" minWidth="1000" width="1000">
             <p:tabView id="tbEmpresas">
-                <p:tab title="Municipio: #{ofertaBienesServiciosController.municipioCe}">
-                    <h:panelGrid columns="2" style="width: 100%;">
+                <p:tab title="Municipio: #{ofertaMB.municipioCe}">
+                    <h:panelGrid columns="2" style="width: 100%;" rendered="#{!menuController.isUsuarioDigitador}">
                         <h:outputText value="Nombre:"/>
-                        <p:inputText style="width: 100%;" value="#{ofertaBienesServiciosController.nombreEmp}" onkeyup="queryEmpresa(this.value);" />
+                        <p:inputText style="width: 100%;" value="#{ofertaMB.nombreEmp}" onkeyup="queryEmpresa(this.value);" />
                     </h:panelGrid>
                     <br/>
-                    <p:dataView id="tblEmpresas" var="capaEmpresa" value="#{ofertaBienesServiciosController.lstCapaEmpresas}" rows="3" paginator="true"
+                    <p:dataView id="tblEmpresas" var="capaEmpresa" value="#{ofertaMB.lstCapaEmpresas}" rows="3" paginator="true"
                                 paginatorPosition="top"
                                 gridIcon="fa fa-th-large" listIcon="fa fa-bars">
                         <ui:include src="/app/comunes/fragmentos/contrataciones/ofertaListadoProveedores.xhtml"/>
@@ -143,7 +144,12 @@
                 </p:tab>
 
                 <p:tab title="Otros Municipios">
-                    <p:dataView id="tblEmpresasOtras" var="capaEmpresa" value="#{ofertaBienesServiciosController.lstCapaEmpresasOtros}" rows="3" paginator="true"
+                    <h:panelGrid columns="2" style="width: 100%;" rendered="#{!menuController.isUsuarioDigitador}">
+                        <h:outputText value="Nombre:"/>
+                        <p:inputText style="width: 100%;" value="#{ofertaMB.nombreEmpOtros}" onkeyup="queryEmpresaOtros(this.value);" />
+                    </h:panelGrid>
+                    <br/>
+                    <p:dataView id="tblEmpresasOtras" var="capaEmpresa" value="#{ofertaMB.lstCapaEmpresasOtros}" rows="3" paginator="true"
                                 paginatorPosition="top"
                                 gridIcon="fa fa-th-large" listIcon="fa fa-bars">
                         <ui:include src="/app/comunes/fragmentos/contrataciones/ofertaListadoProveedores.xhtml"/>
@@ -157,21 +163,21 @@
         </p:dialog>
 
 
-        <p:dialog id="dlgDetalleProveedor" header="#{menuController.isUsuarioDigitador?('PROVE-'.concat(ofertaBienesServiciosController.capaInstSeleccionada.idMuestraInteres.idEmpresa.idEmpresa)):ofertaBienesServiciosController.capaInstSeleccionada.idMuestraInteres.idEmpresa.razonSocial}"
+        <p:dialog id="dlgDetalleProveedor" header="#{menuController.isUsuarioDigitador?('PROVE-'.concat(ofertaMB.capaInstSeleccionada.idMuestraInteres.idEmpresa.idEmpresa)):ofertaMB.capaInstSeleccionada.idMuestraInteres.idEmpresa.razonSocial}"
                   showEffect="fade" hideEffect="fade"  widgetVar="dlgDetalleProveedor" width="670" height="550" modal="true" >
             <h:panelGrid columns="1" >
                 <p:tabView>
-                    <p:tab title="Fotos productos"  rendered="#{ofertaBienesServiciosController.rubro eq 3}">
+                    <p:tab title="Fotos productos"  rendered="#{ofertaMB.rubro eq 3}">
                         <p:outputPanel id="pnlProductos">
                             <h:panelGrid columns="2">
                                 <h:outputText value="Seleccione el estilo:"/> 
-                                <p:selectOneMenu value="#{ofertaBienesServiciosController.estiloSeleccionado}">
-                                    <f:selectItems value="#{ofertaBienesServiciosController.lstEstilos}"/>
-                                    <p:ajax update="pnlProductos" listener="#{ofertaBienesServiciosController.cargarFotosPorEstilo}"/>
+                                <p:selectOneMenu value="#{ofertaMB.estiloSeleccionado}">
+                                    <f:selectItems value="#{ofertaMB.lstEstilos}"/>
+                                    <p:ajax update="pnlProductos" listener="#{ofertaMB.cargarFotosPorEstilo}"/>
                                 </p:selectOneMenu>
                             </h:panelGrid>
                             <h:panelGroup>
-                                <p:galleria value="#{ofertaBienesServiciosController.images}" var="image" panelHeight="400" style="width: auto;" autoPlay="false">
+                                <p:galleria value="#{ofertaMB.images}" var="image" panelHeight="400" style="width: auto;" autoPlay="false">
                                     <p:graphicImage value="/DynamicImageServlet?file=#{bundle['path_images']}#{image}" />
                                 </p:galleria>
                             </h:panelGroup>
@@ -179,7 +185,7 @@
                     </p:tab>
 
                     <p:tab title="Precios de Referencia">
-                        <p:dataTable id="tblDetallePrecio" widgetVar="tblDetallePrecio" value="#{ofertaBienesServiciosController.lstPreciosReferencia}" var="precio" 
+                        <p:dataTable id="tblDetallePrecio" widgetVar="tblDetallePrecio" value="#{ofertaMB.lstPreciosReferencia}" var="precio" 
                                      emptyMessage="No se han registrado precios a este proveedor">
 
                             <p:column headerText="Item" width="15" id="item" style="text-align: center;">
@@ -208,15 +214,16 @@
 
         <p:confirmDialog id="confirmDialog" message="¿Esta seguro de eliminar el proveedor seleccionado?" severity="alert" appendTo="@(body)" 
                          header="Confirmación" widgetVar="confirmDialog" closable="false" showEffect="fade" hideEffect="fade">  
-            <p:commandButton id="confirm" value="Si" icon="fa fa-check-circle" ajax="true" process="@this" actionListener="#{ofertaBienesServiciosController.deleteParticipante}" 
+            <p:commandButton id="confirm" value="Si" icon="fa fa-check-circle" ajax="true" process="@this" actionListener="#{ofertaMB.deleteParticipante}" 
                              update="tblParticipantes" oncomplete="PF('confirmDialog').hide();"/>  
             <p:commandButton id="decline" value="No" onclick="PF('confirmDialog').hide();" type="button" icon="fa fa-times-circle"/>
 
         </p:confirmDialog> 
 
-        <p:remoteCommand name="findEntidad" update="menuBar tblParticipantes nombreCE cldFechaApertura btoAgregarProveedor" actionListener="#{ofertaBienesServiciosController.buscarEntidadEducativa}" />
-        <p:remoteCommand name="findEmpresa" update="tbEmpresas:tblEmpresas" actionListener="#{ofertaBienesServiciosController.filterProveedores()}" />
-        <p:remoteCommand name="findEmpresaReiniciar" update="tbEmpresas:tblEmpresas" actionListener="#{ofertaBienesServiciosController.filterReiniciarProveedores()}" />
+        <p:remoteCommand name="findEntidad" update="menuBar tblParticipantes nombreCE cldFechaApertura btoAgregarProveedor" actionListener="#{ofertaMB.buscarEntidadEducativa}" />
+        <p:remoteCommand name="findEmpresa" update="tbEmpresas:tblEmpresas" actionListener="#{ofertaMB.filterProveedores()}" />
+        <p:remoteCommand name="findEmpresaOtros" update="tbEmpresas:tblEmpresasOtras" actionListener="#{ofertaMB.filterProveedoresOtros()}" />
+        <p:remoteCommand name="findEmpresaReiniciar" update="tbEmpresas:tblEmpresas tbEmpresas:tblEmpresasOtras" actionListener="#{ofertaMB.filterReiniciarProveedores()}" />
 
     </ui:define>
 </ui:composition>
