--- a/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
@@ -502,6 +502,8 @@
                     <p:selectBooleanCheckbox value="#{estadisticasCensoController.utiles}"/>
                     <p:outputLabel value="Zapatos escolares"/>
                     <p:selectBooleanCheckbox value="#{estadisticasCensoController.zapatos}"/>
+                    <p:outputLabel value="Declaración Jurada"/>
+                    <p:selectBooleanCheckbox value="#{estadisticasCensoController.declaracion}"/>
                 </h:panelGrid>
             </p:panel>
             <f:facet name="footer">
