--- a/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
@@ -100,7 +100,7 @@
 
             function calcularTotales() {
                 var matPar = $("#lblMatPar").text();
-                var matCI = $("#lblMatCIr").text();
+                var matCI = $("#lblMatCI").text();
                 var matCII = $("#lblMatCII").text();
                 var matCIII = $("#lblMatCIII").text();
                 var matBac = $("#lblMatBac").text();
