--- a/paquescolar-web/src/main/webapp/app/comunes/fragmentos/contrataciones/ofertaListadoProveedores.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/fragmentos/contrataciones/ofertaListadoProveedores.xhtml
@@ -39,8 +39,11 @@
                     <h:outputText value="Tipo Proveedor" rendered="#{!menuController.isUsuarioDigitador}"/>
                     <h:outputText value="#{capaEmpresa.idMuestraInteres.idEmpresa.distribuidor eq 1 ? 'PRODUCTOR' : 'DISTRIBUIDOR'}" style="font-weight: bold" rendered="#{!menuController.isUsuarioDigitador}"/>
 
-                    <h:outputText value="Capacidad disponible" style="#{menuController.isUsuarioDigitador?'font-size: 16px;':'font-size: 12px;'}"/>
-                    <h:outputText value="#{capaEmpresa.capacidadAcreditada - capaEmpresa.capacidadAdjudicada}" style="#{menuController.isUsuarioDigitador?'font-weight: bold;font-size: 16px;':'font-weight: bold;font-size: 12px;'}"/>
+                    <h:outputText value="Código proveedor" style="#{menuController.isUsuarioDigitador?'font-size: 14px;':'font-size: 12px;'}"/>
+                    <h:outputText value="PROVE-#{capaEmpresa.idMuestraInteres.idEmpresa.idEmpresa}" style="#{menuController.isUsuarioDigitador?'font-weight: bold;font-size: 14px;':'font-weight: bold;font-size: 12px;'}"/>
+                    
+                    <h:outputText value="Capacidad disponible" style="#{menuController.isUsuarioDigitador?'font-size: 14px;':'font-size: 12px;'}"/>
+                    <h:outputText value="#{capaEmpresa.capacidadAcreditada - capaEmpresa.capacidadAdjudicada}" style="#{menuController.isUsuarioDigitador?'font-weight: bold;font-size: 14px;':'font-weight: bold;font-size: 12px;'}"/>
 
                     <h:outputText value="Municipio y Departamento:" rendered="#{!menuController.isUsuarioDigitador}"/>
                     <h:outputText value="#{capaEmpresa.idMuestraInteres.idEmpresa.idMunicipio.nombreMunicipio}, #{capaEmpresa.idMuestraInteres.idEmpresa.idMunicipio.codigoDepartamento.nombreDepartamento}" style="font-weight: bold" rendered="#{!menuController.isUsuarioDigitador}"/>
